fix responsive profile card y añado scrollbar para usuarios filtrados

--- a/src/styles/buscarCuidadorStyle.css
+++ b/src/styles/buscarCuidadorStyle.css
@@ -52,3 +52,8 @@ footer {
   margin: 0;
   margin-bottom: 5rem;
 }
+
+.scrollable-col {
+  max-height: 31.5rem; /* Adjust the height as needed */
+  overflow-y: auto;
+}
